--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="flex flex-col-reverse md:flex-row gap-6">
             <!-- shape container -->
             <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- single shape -->
+                <!-- triangle shape -->
                 <div class="card bg-base-100 w-full md:w-56 lg:w-72  shadow-xl">
                     <figure>
                       <img
-                        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                        src="/public/triangle.png"
                         alt="Shoes" />
                     </figure>
                     <div class="card-body">
