--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- main content -->
         <div class="flex flex-col-reverse md:flex-row gap-6">
             <!-- shape container -->
-            <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-6">
                 <!-- triangle shape -->
                 <div class="card bg-base-100 w-full md:w-56 lg:w-72  shadow-xl">
                     <figure>
@@ -33,11 +33,40 @@
                       </div>
                     </div>
                   </div>
-                <!-- single shape -->
+                <!-- rectangle shape -->
                 <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
                     <figure>
                       <img
-                        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                        src="/public/rectangle.png" class="m-3"/>
+                    </figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Shoes!</h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <button class="btn btn-primary">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+                <!-- parallelogram shape -->
+                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+                    <figure>
+                      <img
+                        src="/public/parallelogram.png"
+                        alt="Shoes" class="m-5"/>
+                    </figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Shoes!</h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <button class="btn btn-primary">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+                <!-- rhombus shape -->
+                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+                    <figure>
+                      <img
+                        src="/public/rhombus.png"
                         alt="Shoes" />
                     </figure>
                     <div class="card-body">
@@ -48,11 +77,11 @@
                       </div>
                     </div>
                   </div>
-                <!-- single shape -->
+                <!-- pentagon shape -->
                 <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
                     <figure>
                       <img
-                        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                        src="/public/pentagon.png"
                         alt="Shoes" />
                     </figure>
                     <div class="card-body">
@@ -63,41 +92,11 @@
                       </div>
                     </div>
                   </div>
-                <!-- single shape -->
+                <!-- ellipse shape -->
                 <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
                     <figure>
                       <img
-                        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                        alt="Shoes" />
-                    </figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
-                <!-- single shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
-                    <figure>
-                      <img
-                        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-                        alt="Shoes" />
-                    </figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
-                <!-- single shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
-                    <figure>
-                      <img
-                        src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+                        src="/public/ellipse.png"
                         alt="Shoes" />
                     </figure>
                     <div class="card-body">
