added triangle calculation content

--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
                         src="/public/triangle.png"
                         alt="Shoes" />
                     </figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
+                    <div class="card-body text-center">
+                        <h2 class="text-center text-xl font-bold" >Triangle</h2>
+                        <p>Area (A) = 0.5 x b x h</p>
+                        <div class="flex items-center justify-center">
+                        <input type="text" placeholder="b" class="w-20 p-2 rounded-sm text-xl"><span class="mr-4 ml-2">cm</span>
+                        <input type="text" placeholder="h" class="w-20 p-2 rounded-sm text-xl"><span class="ml-2">cm</span>
+                    </div>
+                      <div class="card-actions justify-center">
+                        <button class="btn btn-primary w-full">Calculate</button>
                       </div>
                     </div>
                   </div>
@@ -55,8 +59,8 @@
                         alt="Shoes" class="m-5"/>
                     </figure>
                     <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <h2 class="card-title">Triangle</h2>
+                      <p>Area (A) = 0.5 x b x h</p>
                       <div class="card-actions justify-end">
                         <button class="btn btn-primary">Buy Now</button>
                       </div>
@@ -114,5 +118,6 @@
             </div>
         </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
