--- a/index.html
+++ b/index.html
@@ -14,119 +14,182 @@
   <body class="m-8">
     <header></header>
     <main>
-        <!-- main content -->
-        <div class="flex flex-col-reverse md:flex-row gap-6">
-            <!-- shape container -->
-            <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-6">
-                <!-- triangle shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72  shadow-xl">
-                    <figure>
-                      <img
-                        src="/public/triangle.png"
-                        alt="Shoes" />
-                    </figure>
-                    <div class="card-body text-center">
-                        <h2 class="text-center text-xl font-bold" >Triangle</h2>
-                        <p>Area (A) = 0.5 x b x h</p>
-                        <div class="flex items-center justify-center">
-                        <input id="tbase" type="text" placeholder="b" class="w-20 p-2 rounded-sm text-xl"><span class="mr-4 ml-2">cm</span>
-                        <input id="thight" type="text" placeholder="h" class="w-20 p-2 rounded-sm text-xl"><span class="ml-2">cm</span>
-                    </div>
-                    <div>
-                        <p class="text-xl font-bold py-1">Area :<span id="triangleResult" class="mx-2 text-primary">0</span>cm<sup>2</sup></p>
-                    </div>
-                      <div class="card-actions justify-center">
-                        <button id="triangle" class="btn btn-primary w-full">Calculate</button>
-                      </div>
-                    </div>
-                  </div>
-                <!-- rectangle shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
-                    <figure>
-                      <img
-                        src="/public/rectangle.png" class="m-3"/>
-                    </figure>
-                    <div class="card-body text-center">
-                        <h2 class="text-center text-xl font-bold" >Rectangle</h2>
-                        <p>Area (A) = w x l</p>
-                        <div class="flex items-center justify-center">
-                        <input id="rWidth" type="text" placeholder="w" class="w-20 p-2 rounded-sm text-xl"><span class="mr-4 ml-2">cm</span>
-                        <input id="rLength" type="text" placeholder="l" class="w-20 p-2 rounded-sm text-xl"><span class="ml-2">cm</span>
-                    </div>
-                    <div>
-                        <p class="text-xl font-bold py-1">Area :<span id="rectangleResult" class="mx-2 text-primary">0</span>cm<sup>2</sup></p>
-                    </div>
-                      <div class="card-actions justify-center">
-                        <button id="rectangle" class="btn btn-primary w-full">Calculate</button>
-                      </div>
-                    </div>
-                  </div>
-                <!-- parallelogram shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
-                    <figure>
-                      <img
-                        src="/public/parallelogram.png"
-                        alt="Shoes" class="m-5"/>
-                    </figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Triangle</h2>
-                      <p>Area (A) = 0.5 x b x h</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
-                <!-- rhombus shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
-                    <figure>
-                      <img
-                        src="/public/rhombus.png"
-                        alt="Shoes" />
-                    </figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
-                <!-- pentagon shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
-                    <figure>
-                      <img
-                        src="/public/pentagon.png"
-                        alt="Shoes" />
-                    </figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
-                <!-- ellipse shape -->
-                <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
-                    <figure>
-                      <img
-                        src="/public/ellipse.png"
-                        alt="Shoes" />
-                    </figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
+      <!-- main content -->
+      <div class="flex flex-col-reverse md:flex-row gap-6">
+        <!-- shape container -->
+        <div
+          class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-6"
+        >
+          <!-- triangle shape -->
+          <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+            <figure>
+              <img src="/public/triangle.png" alt="Shoes" />
+            </figure>
+            <div class="card-body text-center">
+              <h2 class="text-center text-xl font-bold">Triangle</h2>
+              <p>Area (A) = 0.5 x b x h</p>
+              <div class="flex items-center">
+                <p>b = <span id="baseD">0</span> cm</p>
+                <p>h = <span id="heightD">0</span> cm</p>
+                <svg
+                class="w-4 h-4 cursor-pointer"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <path
+                      d="M21.2799 6.40005L11.7399 15.94C10.7899 16.89 7.96987 17.33 7.33987 16.7C6.70987 16.07 7.13987 13.25 8.08987 12.3L17.6399 2.75002C17.8754 2.49308 18.1605 2.28654 18.4781 2.14284C18.7956 1.99914 19.139 1.92124 19.4875 1.9139C19.8359 1.90657 20.1823 1.96991 20.5056 2.10012C20.8289 2.23033 21.1225 2.42473 21.3686 2.67153C21.6147 2.91833 21.8083 3.21243 21.9376 3.53609C22.0669 3.85976 22.1294 4.20626 22.1211 4.55471C22.1128 4.90316 22.0339 5.24635 21.8894 5.5635C21.7448 5.88065 21.5375 6.16524 21.2799 6.40005V6.40005Z"
+                      stroke="#ffffff"
+                      stroke-width="1.5"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></path>
+                    <path
+                      d="M11 4H6C4.93913 4 3.92178 4.42142 3.17163 5.17157C2.42149 5.92172 2 6.93913 2 8V18C2 19.0609 2.42149 20.0783 3.17163 20.8284C3.92178 21.5786 4.93913 22 6 22H17C19.21 22 20 20.2 20 18V13"
+                      stroke="#ffffff"
+                      stroke-width="1.5"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></path>
+                  </g>
+                </svg>
+              </div>
+              <div class="flex items-center justify-center">
+                <input
+                  id="tBase"
+                  type="text"
+                  placeholder="b"
+                  class="w-16 px-2 rounded-sm text-xl"
+                /><span class="mr-4 ml-2">cm</span>
+                <input
+                  id="tHight"
+                  type="text"
+                  placeholder="h"
+                  class="w-16 px-2 rounded-sm text-xl"
+                /><span class="ml-2">cm</span>
+                <div class="ml-2 bg-zinc-700 px-2 rounded-sm">
+                  <input type="checkbox" name="checkbox" />
+                </div>
+              </div>
+              <div>
+                <p>
+                  Area :<span
+                    id="triangleResult"
+                    class="mx-2 text-primary text-xl"
+                    >0</span
+                  >cm<sup>2</sup>
+                </p>
+              </div>
+              <div class="card-actions justify-center">
+                <button id="triangle" class="btn btn-primary w-full">
+                  Calculate
+                </button>
+              </div>
             </div>
-            <!--Area Calculator Container -->
-            <div class="w-full md:w-56 lg:w-96 border border-gray-700 rounded-md">
-                <h1 class="text-3xl text-center p-4">Area Calculation</h1>
+          </div>
+          <!-- rectangle shape -->
+          <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+            <figure>
+              <img src="/public/rectangle.png" class="m-3" />
+            </figure>
+            <div class="card-body text-center">
+              <h2 class="text-center text-xl font-bold">Rectangle</h2>
+              <p>Area (A) = w x l</p>
+              <div class="flex items-center justify-center">
+                <input
+                  id="rWidth"
+                  type="text"
+                  placeholder="w"
+                  class="w-20 p-2 rounded-sm text-xl"
+                /><span class="mr-4 ml-2">cm</span>
+                <input
+                  id="rLength"
+                  type="text"
+                  placeholder="l"
+                  class="w-20 p-2 rounded-sm text-xl"
+                /><span class="ml-2">cm</span>
+              </div>
+              <div>
+                <p>
+                  Area :<span
+                    id="rectangleResult"
+                    class="mx-2 text-primary text-xl"
+                    >0</span
+                  >cm<sup>2</sup>
+                </p>
+              </div>
+              <div class="card-actions justify-center">
+                <button id="rectangle" class="btn btn-primary w-full">
+                  Calculate
+                </button>
+              </div>
             </div>
+          </div>
+          <!-- parallelogram shape -->
+          <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+            <figure>
+              <img src="/public/parallelogram.png" alt="Shoes" class="m-5" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Triangle</h2>
+              <p>Area (A) = 0.5 x b x h</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- rhombus shape -->
+          <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+            <figure>
+              <img src="/public/rhombus.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- pentagon shape -->
+          <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+            <figure>
+              <img src="/public/pentagon.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- ellipse shape -->
+          <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
+            <figure>
+              <img src="/public/ellipse.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Shoes!</h2>
+              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <div class="card-actions justify-end">
+                <button class="btn btn-primary">Buy Now</button>
+              </div>
+            </div>
+          </div>
         </div>
+        <!--Area Calculator Container -->
+        <div class="w-full md:w-56 lg:w-96 border border-gray-700 rounded-md">
+          <h1 class="text-3xl text-center p-4">Area Calculation</h1>
+        </div>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
