input value set and show in edit item for Triangle

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p>b = <span id="baseD">0</span> cm</p>
                 <p>h = <span id="heightD">0</span> cm</p>
                 <svg
+                id="editIcon"
                 class="w-4 h-4 cursor-pointer"
                   viewBox="0 0 24 24"
                   fill="none"
@@ -75,7 +76,7 @@
                   class="w-16 px-2 rounded-sm text-xl"
                 /><span class="ml-2">cm</span>
                 <div class="ml-2 bg-zinc-700 px-2 rounded-sm">
-                  <input type="checkbox" name="checkbox" />
+                  <input type="checkbox" id="checkbox" />
                 </div>
               </div>
               <div>
