--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
               <img src="/public/triangle.png" alt="Shoes" />
             </figure>
             <div class="card-body text-center">
+              <div>
               <h2 class="text-center text-xl font-bold">Triangle</h2>
               <p>Area (A) = 0.5 x b x h</p>
+            </div>
+              <!-- show and edit input value -->
               <div class="flex items-center">
                 <p>b = <span id="baseD">0</span> cm</p>
                 <p>h = <span id="heightD">0</span> cm</p>
@@ -62,6 +65,7 @@
                   </g>
                 </svg>
               </div>
+              <!-- checkbox and input  -->
               <div class="flex items-center justify-center">
                 <input
                   id="tBase"
@@ -79,16 +83,8 @@
                   <input type="checkbox" id="checkbox" />
                 </div>
               </div>
-              <div>
-                <p>
-                  Area :<span
-                    id="triangleResult"
-                    class="mx-2 text-primary text-xl"
-                    >0</span
-                  >cm<sup>2</sup>
-                </p>
-              </div>
-              <div class="card-actions justify-center">
+             
+              <div class="card-actions justify-center mt-5">
                 <button id="triangle" class="btn btn-primary w-full">
                   Calculate
                 </button>
@@ -187,8 +183,11 @@
           </div>
         </div>
         <!--Area Calculator Container -->
-        <div class="w-full md:w-56 lg:w-96 border border-gray-700 rounded-md">
-          <h1 class="text-3xl text-center p-4">Area Calculation</h1>
+        <div class="w-full md:w-56 lg:w-96 border border-gray-700 rounded-md flex flex-col items-center">
+          <h1 class="text-3xl text-center p-4 underline">Area Calculation</h1>
+          <div>
+            <ol class="list-decimal "><li>Triangle <span class="ml-5" id="triangleResult">0</span>cm<sup>2</sup><button class="bg-primary px-2 py-1 font-bold rounded-sm text-white ml-5">Convert to m<sup>2</sup></button></li></ol>
+          </div>
         </div>
       </div>
     </main>
