--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             </figure>
             <div class="card-body text-center">
               <div>
-              <h2 class="text-center text-xl font-bold">Triangle</h2>
-              <p>Area (A) = 0.5 x b x h</p>
-            </div>
+                <h2 class="text-center text-xl font-bold">Triangle</h2>
+                <p>Area (A) = 0.5 x b x h</p>
+              </div>
               <!-- show and edit input value -->
               <div class="flex items-center">
                 <p>b = <span id="baseD">0</span> cm</p>
                 <p>h = <span id="heightD">0</span> cm</p>
                 <svg
-                id="editIcon"
-                class="w-4 h-4 cursor-pointer"
+                  id="editIcon"
+                  class="w-4 h-4 cursor-pointer"
                   viewBox="0 0 24 24"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
@@ -83,7 +83,7 @@
                   <input type="checkbox" id="checkbox" />
                 </div>
               </div>
-             
+
               <div class="card-actions justify-center mt-5">
                 <button id="triangle" class="btn btn-primary w-full">
                   Calculate
@@ -183,10 +183,14 @@
           </div>
         </div>
         <!--Area Calculator Container -->
-        <div class="w-full md:w-56 lg:w-96 border border-gray-700 rounded-md flex flex-col items-center">
+        <div
+          class="w-full md:w-56 lg:w-96 border border-gray-700 rounded-md flex flex-col items-center"
+        >
           <h1 class="text-3xl text-center p-4 underline">Area Calculation</h1>
           <div>
-            <ol class="list-decimal "><li>Triangle <span class="ml-5" id="triangleResult">0</span>cm<sup>2</sup><button class="bg-primary px-2 py-1 font-bold rounded-sm text-white ml-5">Convert to m<sup>2</sup></button></li></ol>
+            <ol id="displayResult" class="list-decimal">
+              
+            </ol>
           </div>
         </div>
       </div>
