--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header></header>
     <main>
       <!-- main content -->
-      <div class="flex flex-col-reverse md:flex-row gap-6">
+      <div class="flex flex-col-reverse md:flex-row gap-10">
         <!-- shape container -->
         <div
-          class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3 gap-6"
+          class="flex-1 grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 gap-6 justify-items-center"
         >
           <!-- triangle shape -->
           <div class="card bg-base-100 w-full md:w-56 lg:w-72 shadow-xl">
@@ -184,7 +184,7 @@
         </div>
         <!--Area Calculator Container -->
         <div
-          class="w-full md:w-56 lg:w-96 border border-gray-700 rounded-md flex flex-col items-center"
+          class="w-full md:w-80 lg:w-96 border border-gray-700 rounded-md flex flex-col items-center py-5"
         >
           <h1 class="text-3xl text-center p-4 underline">Area Calculation</h1>
           <div>
