display error fixing to show result

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   <input type="checkbox" id="checkbox" />
                 </div>
               </div>
-
+              <p class="showMessage"></p>
               <div class="card-actions justify-center mt-5">
                 <button id="triangle" class="btn btn-primary w-full">
                   Calculate
@@ -452,10 +452,8 @@
           class="w-full md:w-80 lg:w-96 border border-gray-700 rounded-md flex flex-col items-center py-5"
         >
           <h1 class="text-3xl text-center p-4 underline">Area Calculation</h1>
-          <div>
-            <ol id="displayResult" class="list-decimal">
-              
-            </ol>
+          <div id="displayArea" style="display: none;">
+            <ol id="displayResult" class="list-decimal"></ol>
           </div>
         </div>
       </div>
