show message error solved

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
                   <input type="checkbox" id="checkbox" />
                 </div>
               </div>
-              <p class="showMessage"></p>
+              
               <div class="card-actions justify-center mt-5">
                 <button id="triangle" class="btn btn-primary w-full">
                   Calculate
                 </button>
               </div>
+              <div id="triangleMessage" class="message text-red-600" style="display: none;">Click Checkbox, then click Calculate</div>
             </div>
           </div>
           <!-- rectangle shape -->
@@ -160,6 +161,7 @@
                   Calculate
                 </button>
               </div>
+              <div id="rectangleMessage" class="message text-red-600" style="display: none;">Click Checkbox, then click Calculate</div>
             </div>
           </div>
           <!-- parallelogram shape -->
@@ -231,6 +233,7 @@
                   Calculate
                 </button>
               </div>
+              <div id="parallelogramMessage" class="message text-red-600" style="display: none;">Click Checkbox, then click Calculate</div>
             </div>
           </div>
           <!-- rhombus shape -->
@@ -302,6 +305,7 @@
                   Calculate
                 </button>
               </div>
+              <div id="rhombusMessage" class="message text-red-600" style="display: none;">Click Checkbox, then click Calculate</div>
             </div>
           </div>
           <!-- pentagon shape -->
@@ -373,6 +377,7 @@
                   Calculate
                 </button>
               </div>
+              <div id="pentagonMessage" class="message text-red-600" style="display: none;">Click Checkbox, then click Calculate</div>
             </div>
           </div>
           <!-- ellipse shape -->
@@ -444,6 +449,7 @@
                   Calculate
                 </button>
               </div>
+              <div id="ellipseMessage" class="message text-red-600" style="display: none;">Click Checkbox, then click Calculate</div>
             </div>
           </div>
         </div>
